dinamic paths blogs

--- a/src/content/blog/typescript-inline-parameters.mdx
+++ b/src/content/blog/typescript-inline-parameters.mdx
@@ -1,3 +1,9 @@
+---
+img: ksjdn,
+title: Assign types to inline parameters
+description: Learning to assign types in typeScript at the beggining
+---
+
 # **Assign types to inline parameters**
 
 ---
