--- a/src/content/blog/typescript-inline-parameters.mdx
+++ b/src/content/blog/typescript-inline-parameters.mdx
@@ -1,5 +1,5 @@
 ---
-img: ksjdn,
+img: https://em-content.zobj.net/thumbs/72/whatsapp/326/grinning-cat_1f63a.png
 title: Assign types to inline parameters
 description: Learning to assign types in typeScript at the beggining
 ---
