blog styles initials

--- a/src/content/blog/typescript-inline-parameters.mdx
+++ b/src/content/blog/typescript-inline-parameters.mdx
@@ -4,22 +4,22 @@ title: Assign types to inline parameters
 description: Learning to assign types in typeScript at the beggining
 ---
 
-# **Assign types to inline parameters**
+# Assign types to inline parameters
 
 ---
 
-> _Have you wonder how you can assign a type to a parameter? Well, it is easy, let's go to see._
+## Have you asked yourself how you can assign a type to a parameter? Well, it is easy, let's go to see.
 
 Remember that you have to assign a type for each parameter, it could be a string, a number, a boolean, an object, among others
 
-Here is a snippet
+## Here is a snippet
 
 ```ts
 function getFullName(name: string, lastName: string) {
   return `${name} ${lastName}`;
 }
 
-console.log(getFullName("Tim", Jackson)); //Tim Jackson
+console.log(getFullName("Tim", "Jackson")); //Tim Jackson
 ```
 
 The value that you are going to assign at the parameter when you call your function to be executed, has to be of the same type you assigned the parameter when you declared your function, for example:
@@ -45,3 +45,5 @@ console.log(getFullName("Tim", "Castro")); //Tim 1
 ```
 
 The Error can be "Argument of type 'string' is not assignable to parameter of type 'number'."
+
+That's all, now yo know how to assign types easily 👌🏽!
