blog addind a tag

--- a/src/content/blog/typescript-inline-parameters.mdx
+++ b/src/content/blog/typescript-inline-parameters.mdx
@@ -10,7 +10,7 @@ description: Learning to assign types in typeScript at the beggining
 
 ## Have you asked yourself how you can assign a type to a parameter? Well, it is easy, let's go to see.
 
-Remember that you have to assign a type for each parameter, it could be a string, a number, a boolean, an object, among others
+Remember that you have to assign a type for each [parameter](https://developer.mozilla.org/en-US/docs/Glossary/Parameter), it could be a [string](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String), a [number](https://developer.mozilla.org/en/docs/Web/JavaScript/Reference/Global_Objects/Number) , a [boolean](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Boolean), an [object](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object), among others.
 
 ## Here is a snippet
 
