change img round projects

--- a/src/content/blog/typescript-inline-parameters.mdx
+++ b/src/content/blog/typescript-inline-parameters.mdx
@@ -1,5 +1,5 @@
 ---
-img: /public/Untitled.png
+img: /public/TS1 1.png
 title: Assigning types to inline parameters
 description: Learning to assign types in typeScript at the beggining
 ---
