--- a/src/content/blog/typescript-inline-parameters.mdx
+++ b/src/content/blog/typescript-inline-parameters.mdx
@@ -1,5 +1,5 @@
 ---
-img: /public/ts-1.png
+img: ts-1.png
 title: Assigning types to inline parameters
 description: Learning to assign types in typeScript at the beggining
 ---
