added new image posts

--- a/src/content/blog/typescript-basic-types.mdx
+++ b/src/content/blog/typescript-basic-types.mdx
@@ -1,5 +1,5 @@
 ---
-img: ts-2.png
+img: Image.png
 title: Assigning types to objects, arrays ans variables
 description: Learning to assign types in typeScript at the beggining
 ---
