new title second blog

--- a/src/content/blog/typescript-basic-types.mdx
+++ b/src/content/blog/typescript-basic-types.mdx
@@ -1,6 +1,6 @@
 ---
 img: Image.png
-title: Assigning types to objects, arrays ans variables
+title: Assigning types to variables, objects and arrays
 description: Learning to assign types in typeScript at the beggining
 ---
 
